# example/rails_app/app/api/v1/entities/category_entity.rb
@@ -1,0 +1,8 @@
+module V1
+  module Entities
+    class CategoryEntity < Grape::Entity
+      expose :id,   documentation: { type: Integer, desc: "Category ID",   required: true }
+      expose :name, documentation: { type: String,  desc: "Category name", required: true }
+    end
+  end
+end
